--- a/remark.html
+++ b/remark.html
@@ -81,14 +81,14 @@
   <body>
     <header>
       <a href="remark.html?week=1">Week 1</a>
-      <a href="remark.html?week=2">Week 2</a>
-      <a href="remark.html?week=3">Week 3</a>
-      <a href="remark.html?week=4">Week 4</a>
-      <a href="remark.html?week=5">Week 5</a>
-      <a href="remark.html?week=6">Week 6</a>
-      <a href="remark.html?week=7">Week 7</a>
-      <a href="remark.html?week=8">Week 8</a>
-      <a href="remark.html?week=9">Week 9</a>
+      <span>Week 2</span>
+      <span>Week 3</span>
+      <span>Week 4</span>
+      <span>Week 5</span>
+      <span>Week 6</span>
+      <span>Week 7</span>
+      <span>Week 8</span>
+      <span>Week 9</span>
     </header>
     <textarea id="source">
     </textarea>
