--- a/examples/week_1/cssplayground.html
+++ b/examples/week_1/cssplayground.html
@@ -2,6 +2,11 @@
   <head>
     <title>CSS Playground</title>
     <style>
+      .hidden {
+        display: none;
+      }
+
+
       body {
           width: 800px;
           /* margin: auto; */
@@ -84,7 +89,7 @@
         </li>
     </ol>
 
-    <table class="has_border">
+    <table class="has_border centered">
         <thead>
             <tr>
                 <td>Header 1</td>
