--- a/examples/week_1/name.html
+++ b/examples/week_1/name.html
@@ -8,7 +8,8 @@
       This is a                   paragraph.
       This is a second line in my paragraph.
     </p>
-    <p>This is another paragraph<h1></p>
+    <p>This is <raccoon>another</raccoon> paragraph</p>
+    <h1>
       header?
     </h1>
 
