--- a/examples/week_1/trevor.html
+++ b/examples/week_1/trevor.html
@@ -13,7 +13,7 @@
 
     <p>This is a new paragraph. &lt;p/&gt; </p>
 
-    Here are some words <img style="display: none;"
+    Here are some words <img 
     src="homecoming.jpeg">
     Here are some more.
 
@@ -34,9 +34,23 @@
 
     <h3>this is a subheader</h3>
 
-    <ol start="2001" reversed="true" type="I">
+    <ol type="I" start="2001" reversed="true">
       <li>This the first thing</li>
       <li>A second thing</li>
       <li>third time's a charm</li>
       <li>a fouth thing</li>
     </ol>
+
+    <table style="border: 1px solid black">
+      <th><td>H</td><td>K</td><td>HR</td></th>
+      <tr>
+        <td></td>
+        <td>10</td>
+      </tr>
+      <tr>
+        <td></td>
+        <td>10 great hits</td>
+        <td>3 terrible strikeouts</td>
+        <td>1 awesome home run</td>
+      </tr>
+    </table>
