Add Week 2 Materials

--- a/remark.html
+++ b/remark.html
@@ -81,7 +81,7 @@
   <body>
     <header>
       <a href="remark.html?week=1">Week 1</a>
-      <span>Week 2</span>
+      <a href="remark.html?week=2">Week 2</a>
       <span>Week 3</span>
       <span>Week 4</span>
       <span>Week 5</span>
