--- a/remark.html
+++ b/remark.html
@@ -82,7 +82,7 @@
     <header>
       <a href="remark.html?week=1">Week 1</a>
       <a href="remark.html?week=2">Week 2</a>
-      <span>Week 3</span>
+      <a href="remark.html?week=3">Week 3</a>
       <span>Week 4</span>
       <span>Week 5</span>
       <span>Week 6</span>
