--- a/examples/week_4/alert.html
+++ b/examples/week_4/alert.html
@@ -8,7 +8,8 @@
     }
 
     function alert_event_handler(event) {
-      alert(event.key);
+      console.log(event);
+      // alert(event.key);
     }
 
     function alert_element_handler(element) {
