--- a/examples/week_4/dommanipulation.html
+++ b/examples/week_4/dommanipulation.html
@@ -5,8 +5,11 @@
 </head>
 <body>
 <script>
-    // redbox = document.body.querySelector("#redbox");
-    // redbox.setAttribute("style","color: crimson");
+    function make_box_red() {
+        console.log("red!!");
+        redbox = document.body.querySelector("#redbox");
+        redbox.setAttribute("style","color: crimson");
+    }
 
     function make_box_green() {
         greenbox = document.body.querySelector("#greenbox");
@@ -19,7 +22,7 @@
 <h2>Calling a function with the onclick attribute</h2>
 <div id="testing_ground">Watch me change colors!</div>
 
-<input type="button" onclick="" value="Colorize!"></input>
+<input type="button" onClick="make_box_red()" value="Colorize!"></input>
 
 <h2>Creating and inserting DOM elements</h2>
 <ol id="mylist">
@@ -36,6 +39,10 @@
 
 
 <script>
+    redbox = document.body.querySelector("#redbox");
+    redbox.addEventListener("click", make_box_red);
+
+
     bluebox = document.body.querySelector("#bluebox");
     bluebox.setAttribute("style","color: navy");
 
