Add Week 5 notes link

--- a/remark.html
+++ b/remark.html
@@ -11,7 +11,7 @@
       <a href="remark.html?week=2">Week 2</a>
       <a href="remark.html?week=3">Week 3</a>
       <a href="remark.html?week=4">Week 4</a>
-      <span>Week 5</span>
+      <a href="remark.html?week=5">Week 5</a>
       <span>Week 6</span>
       <span>Week 7</span>
       <span>Week 8</span>
