--- a/remark.html
+++ b/remark.html
@@ -12,7 +12,7 @@
       <a href="remark.html?week=3">Week 3</a>
       <a href="remark.html?week=4">Week 4</a>
       <a href="remark.html?week=5">Week 5</a>
-      <span>Week 6</span>
+      <a href="remark.html?week=6">Week 6</a>
       <span>Week 7</span>
       <span>Week 8</span>
       <span>Week 9</span>
