--- a/remark.html
+++ b/remark.html
@@ -15,7 +15,7 @@
       <a href="remark.html?week=4">Week 4</a>
       <a href="remark.html?week=5">Week 5</a>
       <a href="remark.html?week=6">Week 6</a>
-      <span>Week 7</span>
+      <a href="remark.html?week=7">Week 7</a>
       <span>Week 8</span>
       <span>Week 9</span>
     </header>
