--- a/remark.html
+++ b/remark.html
@@ -16,7 +16,7 @@
       <a href="remark.html?week=5">Week 5</a>
       <a href="remark.html?week=6">Week 6</a>
       <a href="remark.html?week=7">Week 7</a>
-      <span>Week 8</span>
+      <a href="remark.html?week=8">Week 8</a>
       <span>Week 9</span>
     </header>
     <textarea id="source"> </textarea>
