Add link to Week 9 notes

--- a/remark.html
+++ b/remark.html
@@ -17,7 +17,7 @@
       <a href="remark.html?week=6">Week 6</a>
       <a href="remark.html?week=7">Week 7</a>
       <a href="remark.html?week=8">Week 8</a>
-      <span>Week 9</span>
+      <a href="remark.html?week=9">Week 9</a>
     </header>
     <textarea id="source"> </textarea>
     <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
