Clean up file structure

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         </titlebar>
         <main>
             <ul>
-                <li><a href="course_lectures/remark.html">Lecture Notes</a></li>
+                <li><a href="remark.html">Lecture Notes</a></li>
                 <li><a href="examples">Labs &amp; In-Class Examples</a></li>
 		<li><a href="students">Student Pages</a></li>
 	    </ul>
