Update for week 5

--- a/examples/week_5/randomWalk.html
+++ b/examples/week_5/randomWalk.html
@@ -3,6 +3,7 @@
         <title>Random Walk</title>
         <script src="apikey.js"></script>
         <script src="randomWalk.js"></script>
+        <script src="randomWalkWithAsync.js"></script>
     </head>
     <body>
 
