Update after week 5

--- a/examples/week_5/eggTimer.html
+++ b/examples/week_5/eggTimer.html
@@ -12,9 +12,9 @@
         <script>
             function waitForEggs() {
                 let wait = document.getElementById("input").value
-                let myGreeting = setTimeout(() => {
+                let myGreeting = setInterval(() => {
                     console.log("Ding! "+ wait);
-                },wait);
+                },wait * 1000);
             }
 
         </script>
