--- a/examples/week_5/randomWalk.html
+++ b/examples/week_5/randomWalk.html
@@ -2,7 +2,7 @@
     <head>
         <title>Random Walk</title>
         <script src="apikey.js"></script>
-        <script src="randomWalk.js"></script>
+        <!-- <script src="randomWalk.js"></script> -->
         <script src="randomWalkWithAsync.js"></script>
     </head>
     <body>
@@ -10,7 +10,8 @@
         <h3>In which we learn about asynchronous function calls</h3>
         <p>
             <input type="text" id="input">
-            <input type="button" value="Walk Five" onclick="walkFive()">
+            <!-- <input type="button" value="Walk Five" onclick="walkFive()"> -->
+            <input type="button" value="Walk Five with Async" onclick="walkFiveWithAsync()">
         </p>
     </body>
 </html>
