--- a/examples/week_4/dommanipulation.html
+++ b/examples/week_4/dommanipulation.html
@@ -7,15 +7,22 @@
 <script>
     function make_box_red() {
         console.log("red!!");
-        redbox = document.body.querySelector("#redbox");
-        redbox.setAttribute("style","color: crimson");
+        try{
+            redbox = document.body.querySelector("#redbox");
+            redbox.setAttribute("style","color: crimson");
+        }
+        catch(e) {
+            console.log(e);
+        }   
     }
+    
+    // This won't work:
+    make_box_red();
 
     function make_box_green() {
         greenbox = document.body.querySelector("#greenbox");
         greenbox.setAttribute("style","color: darkgreen");
     }
-
 
     document.addEventListener("DOMContentLoaded", make_box_green);
 
@@ -24,7 +31,11 @@
 <h2>Calling a function with the onclick attribute</h2>
 <div id="testing_ground">Watch me change colors!</div>
 
-<input id="colorizeButton" type="button" onClick="make_box_red()" value="Colorize!"></input>
+<input id="colorizeButton" type="button" onClick="recolor()" value="Colorize!"></input>
+
+<div>Try
+    <code>https://examplecat.com/cat.png</code>
+</div>
 
 <h2>Creating and inserting DOM elements</h2>
 <ol id="mylist">
@@ -41,38 +52,27 @@
 
 
 <script>
-
+    // Down here it would work:
     // make_box_red();
 
     bluebox = document.body.querySelector("#bluebox");
     bluebox.setAttribute("style","color: navy");
 
-    function recolorTestingGround(e) {
-        console.log("rct");
-        recolor("testing_ground");
-    }
+    // cb = document.body.querySelector("#colorizeButton");
+    // cb.addEventListener("click", recolor);
 
-    cb = document.body.querySelector("#colorizeButton");
-    cb.addEventListener("click", recolorTestingGround);
-
-    function recolor(id) {
-      var e = document.body.querySelector("#"+id);
-      red = 255 * Math.random();
-      green = 255 * Math.random();
-      blue = 255 * Math.random();
-      e.setAttribute("style","color: rgb("+red+","+green+","+blue+")");
+    function recolor() {
+        // TODO: Pick random RGB values between 0 and 255
+        //       assign those as the colors for #testing_ground
+        alert("Implement me!");
     }
 
     function addListItem() {
-        var list = document.body.querySelector("#mylist");
-        var imgUrl = document.body.querySelector("#imageurl").value;
-
-        var li = document.createElement("li");
-        var img = document.createElement("img");
-
-        img.setAttribute("src", imgUrl);
-        li.appendChild(img);
-        list.appendChild(li);
+        // TODO: get the image url from the input field,
+        //       create an image with that url
+        //       create a list item
+        //       attach them both
+        alert("Implement me!");
     }
 </script>
 
