Default randomWalk to promises

--- a/examples/week_5/randomWalk.html
+++ b/examples/week_5/randomWalk.html
@@ -13,7 +13,7 @@
                 <input type="text" id="input">
             </div>
             <div>
-                <input type="radio" name="paradigm" value="promises" id="promises" />
+                <input type="radio" name="paradigm" value="promises" id="promises" checked />
                 <label for="promises">Promises</label>
                 <input type="radio" name="paradigm" value="async" id="async" />
                 <label for="async"><code>async</code> Keyword</label>
