--- a/examples/week_5/eggTimer.html
+++ b/examples/week_5/eggTimer.html
@@ -12,6 +12,10 @@
         <script>
             function waitForEggs() {
                 let wait = document.getElementById("input").value
+
+                setTimeout(()=>{
+                    console.log("DING! Eggs are ready!");
+                }, wait*1000);
             }
 
         </script>
