--- a/examples/week_7/tictactoe/index.html
+++ b/examples/week_7/tictactoe/index.html
@@ -4,6 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React Example: Tic Tac Toe</title>
     <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="shortcut icon" href="https://example.com/myicon.ico">
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
 
