--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
         </titlebar>
         <main>
             <ul>
-                <li><a href="remark.html">Lecture Notes</a></li>
+                <li><a href="lecture_notes/">Lecture Notes</a></li>
                 <li><a href="examples">Labs &amp; In-Class Examples</a></li>
-		<li><a href="students">Student Pages</a></li>
-	    </ul>
+                <li><a href="assignments">Weekly Programming Assignments</a></li>
+                <li><a href="final_project">Final Project</a></li>
+		        <li><a href="students">Student Pages</a></li>
+	        </ul>
         </main>
     </body>
 </html>
