Update Canvas link

--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <body>
         <titlebar>
             <h1>Web Development</h1>
-            <h3>MPCS 52553 - Winter Quarter 2024</h3>
+            <h3>MPCS 52553 - Autumn Quarter 2024</h3>
         </titlebar>
         <main>
             <ul>
                 <li><a href="lecture_notes/">Lecture Notes</a></li>
                 <li><a href="examples">Labs &amp; In-Class Examples</a></li>
                 <li><a href="assignments">Weekly Programming Assignments</a></li>
-                <li><a href="final_project">Final Project</a></li>
+                <li><a href="assignments/final_project">Final Project</a></li>
 		        <li><a href="students">Student Pages</a></li>
 	        </ul>
         </main>
