--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 <li><a href="lecture_notes/">Lecture Notes</a></li>
                 <li><a href="examples">Labs &amp; In-Class Examples</a></li>
                 <li><a href="assignments">Weekly Programming Assignments</a></li>
-                <li><a href="assignments/final_project">Final Project</a></li>
+                <li><a href="final_project">Final Project</a></li>
 		        <li><a href="students">Student Pages</a></li>
 	        </ul>
         </main>
