Clean up web site

--- a/trevor.html
+++ b/trevor.html
@@ -3,46 +3,6 @@
         <title>Awesome Web Development</title>
     </head>
     <body>
-        <h1>Hello       World!</h1>
- 
-
-        <p>
-            <span>spic and span</span>
-            <banana>spic and span</banana>
-            <span>spic and span</span>
-            <span>spic and span</span>
-        </p>
-        <ol type="i">
-            <li>thing 1</li>
-            <li>thing 2</li>
-            <li>a secret third thing</li>
-        </ol>
-        <table style="display: ">
-            <tr>
-                <td></td>
-                <td>oneoneoneoneoneoneoneoneoneoneoneoneoneone</td>
-                <td>two</td>
-            </tr>
-            <TR>
-                <TD>THREE</TD>
-                <TD>THREE AND A HALF</TD>
-                <TD>FOUR</TD>
-            </TR>
-        </table>
-
-
-        <h2>I am a header!</h2>
-        <p>asdk;lfhsdfaksjhlfasd
-        asdfdsa
-        asdfdsa</p>
-        <p>asdfsadffasd</p>
-
-        <p>The first page I saw today was 
-            <a href="../index.html"
-                nonsense_attribute="foo"
-            >Philip's</a></p>
-            <hr>
-        <div> here are some words
-            <img style="display: block;" src="https://examplecat.com/cat.png">
-            more words
-        </div>
+        <h1>Hello World!</h1>
+    </body>
+</html>
