Update website title bar

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <body>
         <titlebar>
             <h1>Web Development</h1>
-            <h3>MPCS 52553 - Autumn Quarter 2024</h3>
+            <h3>MPCS 52553 - Winter Quarter 2025</h3>
         </titlebar>
         <main>
             <ul>
