Clean up styling

--- a/examples/week_2/grid.html
+++ b/examples/week_2/grid.html
@@ -2,7 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Flexbox 1 — basic grid model chosen</title>
+    <title>Grid 1 — basic grid model chosen</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Lobster&display=swap" rel="stylesheet">
     <style>
       html {
         font-family: sans-serif;
@@ -19,6 +22,7 @@
         color: white;
         line-height: 100px;
         margin: 0;
+        font-family: "Lobster";
       }
       .article {
         padding: 10px;
