--- a/examples/week_2/columns.html
+++ b/examples/week_2/columns.html
@@ -9,6 +9,18 @@
     .columns {
       column-count: 3;
     }
+
+    @media (max-width: 1200px) {
+      .columns {
+      column-count: 2;
+    }
+    }    
+
+    @media (max-width: 600px) {
+      .columns {
+      column-count: 1;
+    }
+    }
   </style>
 </head>
 <body>
