Reset egg timer example

--- a/examples/week_5/eggTimer.html
+++ b/examples/week_5/eggTimer.html
@@ -10,7 +10,9 @@
         </p>
         <script>
             function waitForEggs() {
-
+                // Get the value from the input field
+                // Wait that many seconds
+                // alert("ding!")
             }
         </script>
     </body>
