--- a/examples/week_5/randomWalk.html
+++ b/examples/week_5/randomWalk.html
@@ -18,7 +18,7 @@
                 <label for="async"><code>async</code> Keyword</label>
             </div>
             <!-- <input type="button" value="Walk Five" onclick="walkFive()"> -->
-            <input id="walkButton" type="button" value="Walk Five with Async" onclick="walkFiveWithAsync()">
+            <input id="walkButton" type="button" value="Walk Five with Async">
         </p>
         <ol id="results"></ol>
     </body>
