--- a/examples/week_8/watch_party_2/index.html
+++ b/examples/week_8/watch_party_2/index.html
@@ -1,171 +1,25 @@
-<html>
-<head>
-  <title>Watch Party</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <link rel="stylesheet" type="text/css" href="/static/style.css"></link>
-</head>
-<body>
-<div class="splash container"> <!-- TODO: Show me only on "/" -->
-  <div class="splashHeader">
-    <div class="loginHeader">
-      <div class="loggedOut"> <!-- TODO: Show me only to logged-out users -->
-        <a>Login</a>
-      </div>
-      <div class="loggedIn"> <!-- TODO: Show me only to logged-in users -->
-        <a class="welcomeBack">
-          <span class="username">Welcome back, {{ Username }}!</span>
-          <span class="material-symbols-outlined md-18">person</span>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="hero">
-    <div class="logo">
-      <img id="tv" src="/static/tv.jpeg">
-      <img id="popcorn" src="/static/popcorn.png">
-    </div>
-    <h1>Watch Party</h1>
-    <h2>2</h2>
-    <button class="create">Create a Room</button> <!-- TODO: Show me only to logged-in users -->
-    <button class="signup">Signup</button> <!-- TODO: Show me only to logged-out users -->
-  </div>
-  <h2>Rooms</h2>
-  <div class="rooms">
-    <div class="roomList">
-      <a>{{room.id}}: <strong>{{room.name}}</strong></a>
-    </div>
-    <div class="noRooms">No rooms yet! You get to be first!</div> <!-- TODO: Show me only if roomList is empty -->
-  </div>
-</div> <!-- end .splash -->
-<div class="profile"> <!-- TODO: Show me only on "/profile" -->
-  <div class="header">
-    <h2><a>Watch Party</a></h2>
-    <h4>2</h4>
-    <div class="loginHeader">
-      <div class="loggedIn">
-        <a class="welcomeBack">
-          <span class="username">{{ Username }}</span>
-          <span class="material-symbols-outlined md-18">person</span></a>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="clip">
-    <div class="auth container">
-      <h2>Welcome to Watch Party!</h2>
-      <div class="alignedForm">
-        <label for="update_username">Username: </label>
-        <input id="update_username" value="{{ Username }}">
-        <button>update</button>
-        <label for="update_password">Password: </label>
-        <input type="password" id="update_password">
-        <button>update</button>
-        <label for="repeat_password">Repeat: </label>
-        <input type="password" id="repeat_password">
-        <button class="exit goToSplash">Cool, let's go!</button>
-        <button class="exit logout">Log out</button>
-      </div>
-    </div>
-  </div> 
-</div>
-<div class="login"> <!-- TODO: Show me only on "/login" -->
-  <div class="header">
-    <h2><a>Watch Party</a></h2>
-    <h4>2</h4>
-  </div>
-  <div class="clip">
-    <div class="auth container">
-      <h3>Enter your username and password to log in:</h3>
-      <div class="alignedForm login">
-        <label for="login_username">Username</label>
-        <input id="login_username"></input>
-        <button>Login</button>
-        <label for="login_password">Password</label>
-        <input type="password" id="login_password">
-      </div>
-      <div class="failed"> <!-- TODO: Hide me by default. Show only on failed login attempts -->
-        <div class="message">
-          Oops, that username and password don't match any of our users!
-        </div>
-        <button>Create a new Account</button>
-      </div>
-    </div>
-  </div>
-</div> <!-- end .login -->
-<div class="room"> <!-- TODO: Show me only on "/room" (and its subroutes) -->
-  <div class="header">
-    <h2><a>Watch Party</a></h2>
-    <h4>2</h4>
-    <div class="roomDetail">
-      <div class="displayRoomName"> <!-- TODO: Show me by default. Hide when user clicks the edit icon below -->
-        <h3>
-          Chatting in <strong>{{ room.name }}</strong>
-          <a><span class="material-symbols-outlined md-18">edit</span></a>
-        </h3>
-      </div>
-      <div class="editRoomName"> <!-- TODO: Hide me by default. Show when user clicks the edit icon above -->
-        <h3>
-          Chatting in <input>
-          <button>Update</button>
-        </h3>
-      </div>
-      Invite users to this chat at:
-      <a>/rooms/{{ room_id }}</a>
-    </div>
-    <div class="loginHeader">
-      <div class="loggedIn">
-        <a class="welcomeBack">
-          <span class="username">{{ Username }}</span>
-          <span class="material-symbols-outlined md-18">person</span></a>
-        </a>
-      </div>
-    </div>
-  </div>
-  <div class="clip">
-    <div class="container">
-      <div class="chat">
-        <div class="comment_box">
-          <label for="comment">What do you have to say?</label>
-          <textarea name="comment"></textarea>
-          <button type="submit" value="Post">Post</button>
-        </div>
-        <div class="messages"> <!-- TODO: Replace with the content returned by the API -->
-          <message>
-            <author>Mr Chatterworth</author>
-            <content>Good evening! And how is everyone feeling?</content>
-          </message>
-          <message>
-            <author>big chats</author>
-            <content>gr8 lol</content>
-          </message>
-          <message>
-            <author>Mr Chatterworth</author>
-            <content>Splendid!</content>
-          </message>
-          <message>
-            <author>Chatty Cat</author>
-            <content>
-              Meow meow meow meow meow meow meow meow meow meow meow 
-              meow meow meow meow meow meow meow meow meow meow meow 
-              meow meow meow meow meow meow meow meow meow meow meow 
-            </content>
-          </message>
-          <message>
-            <author>Mr Chatterworth</author>
-            <content>Indeed, M. Cat. Indeed. 🧐</content>
-          </message>
-        </div>
-      </div>
-      <div class="noMessages">
-        <h2>Oops, we can't find that room!</h2>
-        <p><a>Let's go home and try again.</a></p>
-      </div>
-    </div> <!-- end .container -->
-  </div> <!-- end .clip -->
-</div> <!-- end .room -->
-<script src="/static/script.js"> </script>
-</body>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Watch Party with Conditional Rendering</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
+    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="shortcut icon" href="https://example.com/myicon.ico">
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+    <!-- Don't use this in production: -->
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script
+      type="text/babel"
+      src="watch_party_react.js"
+      data-presets="es2015,react"
+    ></script>
+  </body>
 </html>
