Fix asset paths

--- a/examples/week_8/watch_party_2/watchparty.html
+++ b/examples/week_8/watch_party_2/watchparty.html
@@ -5,7 +5,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-  <link rel="stylesheet" type="text/css" href="/static/style.css"></link>
+  <link rel="stylesheet" type="text/css" href="style.css"></link>
 </head>
 <body>
 <div class="splash container"> <!-- TODO: Show me only on "/" -->
@@ -24,8 +24,8 @@
   </div>
   <div class="hero">
     <div class="logo">
-      <img id="tv" src="/static/tv.jpeg">
-      <img id="popcorn" src="/static/popcorn.png">
+      <img id="tv" src="static/tv.jpeg">
+      <img id="popcorn" src="static/popcorn.png">
     </div>
     <h1>Watch Party</h1>
     <h2>2</h2>
