Set up React for Watch Party 2 example

--- a/examples/week_8/watch_party_2/index.html
+++ b/examples/week_8/watch_party_2/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Rowdies:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="style.css" />
     <link rel="shortcut icon" href="https://example.com/myicon.ico">
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -18,7 +18,7 @@
     <div id="root"></div>
     <script
       type="text/babel"
-      src="watch_party_react.js"
+      src="watch_party_react.jsx"
       data-presets="es2015,react"
     ></script>
   </body>
