--- a/examples/week_8/watch_party_2/watchparty.html
+++ b/examples/week_8/watch_party_2/watchparty.html
@@ -24,8 +24,8 @@
   </div>
   <div class="hero">
     <div class="logo">
-      <img id="tv" src="static/tv.jpeg">
-      <img id="popcorn" src="static/popcorn.png">
+      <img id="tv" src="tv.jpeg">
+      <img id="popcorn" src="popcorn.png">
     </div>
     <h1>Watch Party</h1>
     <h2>2</h2>
