Update quarter on lecture notes index page

--- a/lecture_notes/index.html
+++ b/lecture_notes/index.html
@@ -24,7 +24,7 @@
     </div>
     <div id="indexContainer">
       <h1>Lecture Notes</h1>
-      <h4>Web Development Autumn 2024</h4>
+      <h4>Web Development Spring 2025</h4>
       My lecture notes are written in
       <a href="https://docs.github.com/en/get-started/writing-on-github/getting-started-with-writing-and-formatting-on-github/basic-writing-and-formatting-syntax">Markdown</a>,
       and they are parsed into the slides for class with a Javascript library called
