Update for Week 2

--- a/examples/week_1/cssplayground.html
+++ b/examples/week_1/cssplayground.html
@@ -7,11 +7,15 @@
       }
 
       body {
-          width: 800px;
-          /* margin: auto; */
+          color: purple;
+          width: 700px;
+          margin: auto;
           font-family: "Gotham", "Proxima Nova", "Arial", "Helvetica", sans-serif;
       }
-      div {padding: 5px;}
+      div {
+        color: gray;
+        padding: 5px;
+      }
       li li {
         color: green;
       }
