--- a/trevor.html
+++ b/trevor.html
@@ -2,8 +2,11 @@
     <head>
         <title>Super Awesome Web Development</title>
     </head>
+    <style>
+
+    </style>
     <body>
-        <h1>Hello World!</h1>
+        <h1 style="color: red">Hello World!</h1>
 
         <h2>This is an H2 header</h2>
 
